# opentelemetry-ecosystem-explorer

./: .gitignore  .markdownlint-cli2.yaml  .markdownlint.json  .pre-commit-config.yaml  .prettierignore  AGENTS.md  CONTRIBUTING.md  README.md  netlify.toml  package-lock.json  package.json  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  renovate.json5
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml  research.yaml
.github/scripts/: build-screenshots-comment.py  sync-documentation.sh  use-cla-approved-bot.sh
.github/workflows/: build-and-test.yml  build-explorer-database.yml  codeql.yml  collector-schema-backfill.yml  db-builder-integration.yml  documentation-sync-fork.yml  documentation-sync.yml  issue-management-feedback-label.yml  issue-management-stale-action.yml  markdown-lint.yml  nightly-declarative-config-test.yml  nightly-registry-update.yml  regenerate-collector-registry.yml  reusable-workflow-notification.yml  scorecard.yml  screenshots-baseline.yml  screenshots-capture.yml  screenshots-cleanup.yml  screenshots-commit.yml  screenshots.yml  survey-on-merged-pr.yml  zizmor.yml
docs/: AGENT_READINESS.md  README.md  architecture-overview.md  content-addressed-storage.md  development.md  dotnet-integration-roadmap.md  frontend-architecture.md  registry-structure.md  watchers-registry-consumers.md  watchers-synchronizers.md
docs/media/: component-overview.excalidraw
ecosystem-automation/: README.md
ecosystem-automation/collector-watcher/: README.md  pyproject.toml
ecosystem-automation/collector-watcher/src/collector_watcher/: __init__.py  __main__.py  collector_sync.py  component_scanner.py  deprecation_detector.py  inventory_manager.py  main.py  metadata_parser.py  repository_manager.py  schema_copier.py  type_defs.py  types.py  version.py  version_detector.py
ecosystem-automation/collector-watcher/tests/: __init__.py  test_collector_sync.py  test_component_scanner.py  test_inventory.py  test_metadata_parser.py  test_repository_manager.py  test_schema_copier.py  test_version.py  test_version_detector.py
ecosystem-automation/documentation-sync/: README.md  pyproject.toml
ecosystem-automation/documentation-sync/src/documentation_sync/: __init__.py  doc_content_generator.py  doc_marker_updater.py  docs_repository_manager.py  fix_spelling.py  main.py  update_docs.py
ecosystem-automation/documentation-sync/tests/: test_doc_content_generator.py  test_doc_marker_updater.py  test_docs_repository_manager.py  test_fix_spelling.py  test_metadata_diagnostics.py  test_update_docs.py
ecosystem-automation/dotnet-instrumentation-watcher/: pyproject.toml
ecosystem-automation/dotnet-instrumentation-watcher/src/dotnet_instrumentation_watcher/: __init__.py  dotnet_client.py  instrumentation_sync.py  inventory_manager.py  main.py
ecosystem-automation/dotnet-instrumentation-watcher/tests/: test_dotnet_client.py  test_instrumentation_sync.py  test_inventory_manager.py  test_main.py
ecosystem-automation/java-instrumentation-watcher/: README.md  pyproject.toml
ecosystem-automation/java-instrumentation-watcher/src/java_instrumentation_watcher/: __init__.py  __main__.py  instrumentation_parser.py  instrumentation_sync.py  inventory_manager.py  java_instrumentation_client.py  main.py
ecosystem-automation/java-instrumentation-watcher/tests/: test_instrumentation_parser.py  test_instrumentation_sync.py  test_inventory_manager.py  test_java_instrumentation_client.py  test_readme_extractor.py
ecosystem-automation/prometheus-watcher/: pyproject.toml
ecosystem-automation/prometheus-watcher/src/prometheus_watcher/: inventory_manager.py
ecosystem-automation/prometheus-watcher/src/prometheus_watcher.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ecosystem-automation/prometheus-watcher/tests/: __init__.py  test_prometheus_inventory.py
ecosystem-automation/v1-registry-sync/: README.md  pyproject.toml
ecosystem-automation/v1-registry-sync/src/v1_registry_sync/: main.py  models.py  reader.py  reporter.py
ecosystem-automation/v1-registry-sync/tests/: test_reader.py  test_reporter.py
ecosystem-explorer/: .env  .env.development  .env.test  .gitignore  .prettierignore  AGENTS.md  DESIGN.md  DESIGN_V1.md  README.md  aggregate-configurations.cjs  eslint.config.js  index.html  package-lock.json  package.json  postcss.config.js  test_output.txt  tsconfig.app.json  vite.config.ts  vitest.config.ts  vitest.integration.config.ts
scripts/: add_copyright.py  check_copyright.py
(+5379 files in other folders)
