[project]
name = "opentelemetry-ecosystem-explorer"
version = "0.1.0"
description = "Project for exploring the OpenTelemetry ecosystem"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "Apache-2.0" }

[tool.uv.workspace]
members = [
    "ecosystem-automation/*",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["ecosystem-automation"]
python_files = ["test_*.py", "*_test.py"]