[project]
name = "documentation-sync"
version = "0.1.0"
description = "Automation tool for synchronizing documentation with the OpenTelemetry ecosystem registry"
requires-python = ">=3.11"
dependencies = [
    "semantic-version>=2.10.0",
]

[project.scripts]
documentation-sync = "documentation_sync.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/documentation_sync"]