[project]
name = "v1-registry-sync"
version = "0.1.0"
description = "Dry-run tool for syncing stability and description from V2 registry into V1 entries"
requires-python = ">=3.11"
dependencies = [
    "PyYAML>=6.0.1",
    "semantic-version>=2.10.0",
]

[project.scripts]
v1-registry-sync = "v1_registry_sync.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/v1_registry_sync"]
